@@ -17,6 +17,8 @@ git-annex (5.20150732) UNRELEASED; urgency=medium
     make the proxied command fail the same way.
   * proxy: Fix removal of files deleted by the proxied command.
   * proxy: Fix behavior when run in subdirectory of git repo.
+  * Windows: Fix bug that caused git-annex sync to fail due to missing
+    environment variable.
 
  -- Joey Hess <id@joeyh.name>  Fri, 31 Jul 2015 12:31:39 -0400
 
